Add taple & make a nav bar by list

--- a/index.html
+++ b/index.html
@@ -2,8 +2,61 @@
 <html>
 	<head>
 		<title>My Webpage</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
 	<body>
-		Hello, world!
+		<div>
+			<ul>
+				<li>First item</li>
+				<li>Second item</li>
+				<li>Third item</li>
+				<li>Fourth item</li>
+				<li id="right"> <a id="link" target="-blank"  href="second-page.html">Click here</a></li>
+			</ul>
+		</div>
+		<h1>The Heading</h1>
+		<img src="butterfly.jpg">
+	
+		<div>
+			<table>
+				<tr>
+					<th>First</th>
+					<th>Second</th>
+					<th>Third</th>
+					<th>Forth</th>
+				</tr>
+				<tr>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>				 <td>some info.</td>
+
+				</tr>
+				<tr>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+
+				</tr>
+				<tr>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+				</tr>
+				<tr>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+				</tr>
+				<tr>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+					<td>some info.</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
