Add some html tag and css properties

--- a/second-page.html
+++ b/second-page.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="secondpage.css">
 </head>
 <body>
-	Hello world!
-
-</body>
+	<div class="header">
+		<h1>Heading</h1>
+	</div>
+	<div class="nav">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+		</ul>
+	</div>
+	<div class="row">
+		<div class="column" style="background-color: lightgrey;">
+			<div class="left">Section</div>
+			<div class="left">article</div>
+		</div>
+		<div id="aside" class="column">aside</div>
+	</div>
+	<div class="footer">Footer</div>
+</body>  
 </html>
