made new changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 	<body>
 		<div>
 			<ul>
-				<li>First item</li>
-				<li>Second item</li>
-				<li>Third item</li>
-				<li>Fourth item</li>
-				<li id="right"> <a id="link" target="-blank"  href="second-page.html">Click here</a></li>
+				<li><a href="first-page.html">First page</a></li>
+				<li><a href="second-page.html">Second page</a></li>
+				<li><a href="third-page.html">Third page</a></li>
+				<li id="right"> <a id="link" target="-blank"  href="fourth-page.html">Fourth page</a></li>
 			</ul>
 		</div>
 		<h1>The Heading</h1>
