--- a/second-page.html
+++ b/second-page.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Second page</title>
 	<link rel="stylesheet" type="text/css" href="secondpage.css">
 </head>
 <body>
 	<div class="header">
-		<h1>Heading</h1>
+		<img src="img_nature_wide.jpg">
 	</div>
 	<div class="nav">
 		<ul>
 			<li><a href="index.html">Home</a></li>
+			<li><a href="first-page.html">First page</a></li>
+			<li><a href="third-page.html">Third page</a></li>
+			<li><a href="fourth-page.html">Fourth page</a></li>
+			
 		</ul>
 	</div>
 	<div class="row">
