--- a/first-page.html
+++ b/first-page.html
@@ -19,6 +19,9 @@
 		li:hover{
 			background-color:red; 
 		}
+		#right{
+			float: right;
+		}
 	</style>
 </head>
 <body>
@@ -27,7 +30,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="second-page.html">Second page</a></li>
 			<li><a href="third-page.html">Third page</a></li>
-			<li><a href="fourth-page.html">Fourth page</a></li>
+			<li id="right"><a href="fourth-page.html">Fourth page</a></li>
 		</ul>
 	</div>
 </body>
