delete some image

--- a/second-page.html
+++ b/second-page.html
@@ -13,7 +13,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="first-page.html">First page</a></li>
 			<li><a href="third-page.html">Third page</a></li>
-			<li><a href="fourth-page.html">Fourth page</a></li>
+			<li id="right"><a href="fourth-page.html">Fourth page</a></li>
 			
 		</ul>
 	</div>
