--- a/first-page.html
+++ b/first-page.html
@@ -3,6 +3,12 @@
 <head>
 	<title>First page</title>
 	<style type="text/css">
+		@media only screen and (max-width: 960px){
+			li {
+				float: none;
+				width: 100%;
+			}
+		}
 		a{
 			text-decoration: none;
 			color: white;        }
