Made bootstrap columns by grid model.

--- a/first-page.html
+++ b/first-page.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>First page</title>
-	<style type="text/css">
-		
-		a{
-			text-decoration: none;
-			color: white;        }
-		ul {
-			list-style: none;
-			background-color: green; 
-			padding: 0px;
-			margin: 0px;
-		}
-		li{
-			display: inline-block;
-			padding: 15px;
-		}
-		li:hover{
-			background-color:red; 
-		}
-		#right{ 
-			float: right;
-		}
-		@media only screen and (max-width: 960px){
-			li {
-				float: none;
-				width: 100%;
-			}
-			#right {
-				float: none;
-			}
-		}
-	</style>
-</head>
-<body>
-	<div>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="second-page.html">Second page</a></li>
-			<li><a href="third-page.html">Third page</a></li>
-			<li id="right"><a href="fourth-page.html">Fourth page</a></li>
-		</ul>
-	</div>
-</body>
+	<head>
+		<title>First page</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="first-page.css">
+	</head>
+	<body>
+		<div>
+			<ul>
+				<li><a id="link1" href="index.html">Home</a></li>
+				<li><a id="link2" href="second-page.html">Second page</a></li>
+				<li><a id="link3" href="third-page.html">Third page</a></li>
+				<li id="right"><a id="link4" href="fourth-page.html">Contact Us</a></li>
+			</ul>
+		</div>
+		<div id="heading">
+			<h1>Very Short Paragraphs for Kids</h1>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h3>Each One Teach One</h3>
+					<P>Adult education is essential for Democracy of India. The number of grown up illiterates is great. All college and senior School students should come forward to visit villages in the summer vacation. Each one will teach one there. This will remove illiteracy and strengthen our democracy.</P>
+				</div>
+				<div class="col">
+					<h3>The Stampede at Wankhade Stadium</h3>
+					<p>I happened to see a one day cricket match between Pakistan and Australia at Wankhade Stadium, Mumbai. I went for a fun. But I wit­nessed a horrible sight. Two thousand ticketless cricket fans gate crashed. There was a stampede. Three persons died and twenty were injured. Administration was responsible for it.</p>
+				</div>
+				<div class="col">
+					<h3>A Slum Area after the Rainy Season</h3>
+					<p>My visit to a slum area after the rainy season was a sad affair. The pits were still full of rain water. There was mud all around. The polluted water had caused various diseases. There was no home without a sick person. Small children suffered from stomach troubles. The govern­ment should immediately rush to the help of the sufferers in the slum area.</p>
+				</div>
+				<div class="col">
+					<h3>Memories of Childhood</h3>
+					<p>Memories of childhood are unforgettable. I was four years old when my grandfather died. I clearly remember how everybody in the house was weeping.Once my mother loved me very much when I had a bad dream. I broke my leg and was in plaster for two months. These and other memories still come on the inner screen of my mind very often.</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
