Made css inhertance

--- a/second-page.html
+++ b/second-page.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Second page</title>
-	<link rel="stylesheet" type="text/css" href="secondpage.css">
-</head>
-<body>
-	<div class="header">
-		<img src="img_nature_wide.jpg">
-	</div>
-	<div class="nav">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="first-page.html">First page</a></li>
-			<li><a href="third-page.html">Third page</a></li>
-			<li id="right"><a href="fourth-page.html">Fourth page</a></li>
-			
-		</ul>
-
-
-
-	</div>
-	<div class="row">
-		<div class="column" style="background-color: lightgrey;">
-			<div class="left">Section</div>
-			<div class="left">article</div>
+	<head>
+		<title>Second page</title>
+		<link rel="stylesheet" type="text/css" href="secondpage.css">
+	</head>
+	<body>
+		<div class="header">
+			<img src="img_nature_wide.jpg">
 		</div>
-		<div id="aside" class="column">aside</div>
-	</div>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="first-page.html">First page</a></li>
+				<li><a href="third-page.html">Third page</a></li>
+				<li id="right"><a href="fourth-page.html">Contact Us</a></li>
+				
+			</ul>
+		</div>
+		<div class="container">
+			<div id="left-page" class="col">
+				<div id="section" class="row">
+					<h1>Section</h1>
+				</div>
+				<div id="article" class="row">
+					<h1>Article</h1>
+				</div>
+			</div>
+			<div id="content" class="col">
+				<h1>Content</h1>
+			</div>
+			<div id="aside" class="col">
+				<h1>Aside</h1>
+			</div>
+		</div>
 
+		
 
-
-
-	<div class="footer">Footer</div>
-</body>  
+		<div class="footer">
+			<h1>Footer</h1>
+		</div>
+	</body>  
 </html>
