--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 				<li><a href="first-page.html">First page</a></li>
 				<li><a href="second-page.html">Second page</a></li>
 				<li><a href="third-page.html">Third page</a></li>
-				<li id="right"> <a id="link" target="-blank"  href="fourth-page.html">Fourth page</a></li>
+				<li id="right"> <a id="link" href="fourth-page.html">Contact Us</a></li>
 			</ul>
 		</div>
-		<h1>The Heading</h1>
 		<img src="butterfly.jpg">
+		<h1 style="text-align: center;">The Heading</h1>
 	
 		<div>
 			<table>
@@ -27,7 +27,8 @@
 				<tr>
 					<td>some info.</td>
 					<td>some info.</td>
-					<td>some info.</td>				 <td>some info.</td>
+					<td>some info.</td>				 
+					<td>some info.</td>
 
 				</tr>
 				<tr>
@@ -56,6 +57,22 @@
 					<td>some info.</td>
 				</tr>
 			</table>
+		</div>
+		<div id="div">
+			<h3 id="h3">Short paragraph on animals</h3>
+				<p id="p">There are so many species of animals in the world. The entire animal world may be classified into five types. They are amphibians, reptiles, mammals, birds, and insects. The animals that live both on land and in water have moist skin and no scales on body are called amphibians. The toad and the frog are the two good examples of amphibians.
+
+				The animals having cold blood, scaly body and needing to be in the sun for a long period of time are called reptiles.
+
+				The two most common examples of reptiles are the snake and the crocodile.
+
+				The mammal is an animal that has warm blood and hairy body. It breast-feeds its young. The cow, the lion and man are some of the good examples of this type.
+
+				Birds have wings, beaks, and can fly. The parrot and the crow are some examples of birds.
+
+				Bees and mosquitoes are called insects. The body of an insect has three parts – the head, the thorax and the abdomen. It has six legs, but no backbone. It can also fly like the bird.
+			</p>
+
 		</div>
 	</body>
 </html>
